--- a/src/screens/Navigationbar/navigate.css
+++ b/src/screens/Navigationbar/navigate.css
@@ -1,6 +1,6 @@
 .navigation__container{
     background-color: var(--nav-color);
-    color:white;
+ 
 }
 .navbar-light .navbar-nav .nav-link{
     color:var(--font-color)!important;
@@ -13,6 +13,6 @@
     filter:invert(1);
 }
 .links a:hover{
-    background-color:var(--nav-color-hover);
+    background-color:gray;
 
 }
