--- a/src/screens/Aboutme/aboutme.css
+++ b/src/screens/Aboutme/aboutme.css
@@ -11,6 +11,8 @@ max-width: 600px;
 border-radius: 50%;
 border:0.5px solid rgb(218,218,218);
 margin-bottom: 1rem;
+max-width: 100px;
+max-height:100px;
 }
 
 @media only screen and (max-width:900px){
@@ -19,10 +21,9 @@ margin-bottom: 1rem;
     }
 }
 
-@media only screen and (max-width:700px){
+ @media only screen and (max-width:700px){
     .about_text{
-        max-width: 300px;
+        max-width: 500px;
         }
-    
-
-}
+     
+    }
